Closed Bug 1672776 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::a11y::GeckoTextMarker::CreateAXTextMarker]

Categories

(Core :: Disability Access APIs, defect, P1)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- wontfix
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/53d05233-9297-4c7d-812b-29c600201022

Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS

Top 10 frames of crashing thread:

0 XUL mozilla::a11y::GeckoTextMarker::CreateAXTextMarker accessible/mac/GeckoTextMarker.mm:128
1 XUL -[MOXTextMarkerDelegate moxRightWordTextMarkerRangeForTextMarker:] accessible/mac/MOXTextMarkerDelegate.mm:167
2 XUL -[MOXAccessibleBase accessibilityAttributeValue:forParameter:] accessible/mac/MOXAccessibleBase.mm:348
3 AppKit ___NSAccessibilityEntryPointValueForAttributeWithParameter_block_invoke.821 
4 AppKit NSAccessibilityPerformEntryPointObject 
5 AppKit NSAccessibilityEntryPointValueForAttributeWithParameter 
6 AppKit CopyParameterizedAttributeValue 
7 HIServices _AXXMIGCopyParameterizedAttributeValue 
8 HIServices _XCopyParameterizedAttributeValue 
9 HIServices mshMIGPerform 
Severity: -- → S1

It seems like the GeckoTextMarker::Range can sometimes return invalid ranges.
We need to check if they are valid or not before marshalling them.

Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7ce2731941fe
Return nil TextMarker(Range) if GeckoTextMarker(Range) is invalid. r=morgan
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(eitan)
Flags: needinfo?(eitan)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: