Bug 1672776 - Return nil TextMarker(Range) if GeckoTextMarker(Range) is invalid. r=morgan

It seems like the GeckoTextMarker::Range can sometimes return invalid ranges.
We need to check if they are valid or not before marshalling them.

Differential Revision: https://phabricator.services.mozilla.com/D95230